# part-9

./: 01. Equazioni Differenziali Ordinarie.ipynb  02. Esercizio - BMW i8 - sol.ipynb  02. Esercizio - BMW i8.ipynb  03. Esercizio - Riscaldamento di una Stanza - sol.ipynb  03. Esercizio - Riscaldamento di una Stanza.ipynb  04. Esercizio - Dalla Terra alla Luna - sol.ipynb  04. Esercizio - Dalla Terra alla Luna.ipynb  05. Esercizio - Serbatoi Comunicanti - sol.ipynb  05. Esercizio - Serbatoi Comunicanti.ipynb  06. Esercizio - Planata - sol.ipynb  06. Esercizio - Planata.ipynb  07. Esercizio - PX8 - sol.ipynb  07. Esercizio - PX8.ipynb  pyproject.toml
base/: util.py  vdp.py
esempio/: vdp.py
sol/: bmw.py  gliding.py  heating.py  moonshot.py  piccard.py  tubes.py
